[gd_scene load_steps=3 format=2]

[ext_resource path="res://Structure/Building_Basic.gd" type="Script" id=1]
[ext_resource path="res://Atta_Detect/ObjectDetectionZone.tscn" type="PackedScene" id=2]

[node name="Building_Basic" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ScreenPos" type="Node2D" parent="."]

[node name="ObjectDetectionZone" parent="." instance=ExtResource( 2 )]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
